# iax-legal-research-agent

./: .gitignore  README_update_urls.md  iax-legal-research-agent.code-workspace  langgraph.json  pyproject.toml  update_urls.py
src/: playground_lg.py
src/iax_legal_lg_rag_research_agent/index_graph/: __init__.py  configuration.py  graph.py  state.py
src/iax_legal_lg_rag_research_agent/retrieval_graph/: __init__.py  configuration.py  graph.py  prompts.py  state.py
src/iax_legal_lg_rag_research_agent/retrieval_graph/researcher_graph/: graph.py  state.py
src/iax_legal_lg_rag_research_agent/shared/: retrieval.py
tests/integration_tests/: test_graph.py
